Fixed comments overflow

--- a/client/app/blueprints/sample/static/sample.css
+++ b/client/app/blueprints/sample/static/sample.css
@@ -1,3 +1,7 @@
+#comment-container {
+  max-height: 40em;
+}
+
 .sidebar {
     height: 30rem;
 }
